@@ -1,6 +1,12 @@
 2018-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2017-09-21  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* lib/target-supports.exp
+	(check_effective_target_frame_pointer_for_non_leaf): Add
+	case for x86 Solaris.
+
 	2017-09-20  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 		    Jeff Law  <law@redhat.com>
 
