@@ -1,6 +1,11 @@
 2018-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2017-09-21  Jeff Law  <law@redhat.com>
+
+	* config/i386/i386.c (ix86_adjust_stack_and_probe_stack_clash):
+	Fix dump output if the only stack space is for pushed registers.
+
 	2017-09-20  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 		    Jeff Law  <law@redhat.com>
 
